Fixes issue with the 'more' and 'less' icons used in the Collapseomatic integration for expandable/collapsible area headings not appearing by adding the appropriate font weight as required by the Font Awesome free version.

--- a/css/collapse-o-matic-default.css
+++ b/css/collapse-o-matic-default.css
@@ -21,6 +21,7 @@
 
 /* Add an :after pseudo-element to the trigger for an open/close graphic that changes when the trigger is clicked */
 .collapseomatic::after{
+	font-weight: 900;
 	display: inline-block;
 	font-family: Font Awesome\ 5 Free;
 	content: '\f055';
@@ -31,5 +32,6 @@
 
 /* Switch the trigger graphic when the target element is open */
 .collapseomatic.colomat-close::after{
+	font-weight: 900;
 	content: "\f056";	
 }
